--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "axios": "^1.6.8",
     "base-64": "^1.0.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "node-pg": "^1.0.1",
